# ops-copilot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: agent.py  incidents.py  main.py  mcp_server.py  schemas.py  tools.py
data/: generate_incidents.py
data/incidents/inc_001_bad_deploy/: deploys.json  label.yaml  logs.jsonl  metrics.json
data/incidents/inc_002_bad_deploy/: deploys.json  label.yaml  logs.jsonl  metrics.json
data/incidents/inc_003_bad_deploy/: deploys.json  label.yaml  logs.jsonl  metrics.json
data/incidents/inc_004_bad_deploy/: deploys.json  label.yaml  logs.jsonl  metrics.json
data/incidents/inc_005_db_connection_pool_exhaustion/: deploys.json  label.yaml  logs.jsonl  metrics.json
data/incidents/inc_006_db_connection_pool_exhaustion/: deploys.json  label.yaml  logs.jsonl  metrics.json
data/incidents/inc_007_db_connection_pool_exhaustion/: deploys.json  label.yaml  logs.jsonl  metrics.json
data/incidents/inc_008_db_connection_pool_exhaustion/: deploys.json  label.yaml  logs.jsonl  metrics.json
data/incidents/inc_009_memory_leak_oom/: deploys.json  label.yaml  logs.jsonl  metrics.json
data/incidents/inc_010_memory_leak_oom/: deploys.json  label.yaml  logs.jsonl  metrics.json
data/incidents/inc_011_memory_leak_oom/: deploys.json  label.yaml  logs.jsonl  metrics.json
data/incidents/inc_012_memory_leak_oom/: deploys.json  label.yaml  logs.jsonl  metrics.json
data/incidents/inc_013_downstream_timeout/: deploys.json  label.yaml  (+2 more)
scripts/: diagnose.py  hello_langsmith.py
tests/: test_agent_smoke.py  test_health.py  test_incidents.py  test_tools.py
(+44 files in other folders)
