[project]
name = "ops-copilot"
version = "0.1.0"
description = "Agentic incident-diagnosis assistant"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "langsmith>=0.1.140",
    "pyyaml>=6.0",
    "mcp[cli]>=1.2.0",
    "langgraph>=0.3.0",
    "langchain>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-groq>=0.2.0",
]

[project.optional-dependencies]
# Alternative free/paid LLM providers — install only if you switch LLM_PROVIDER.
openai = ["langchain-openai>=0.2.0"]
google = ["langchain-google-genai>=2.0.0"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle errors, pyflakes, import sorting

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
